fix width of tweet blocks on mobile resize

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -241,6 +241,7 @@ body {
 
 .tech-news {
   color: black;
+  max-width: 300px;
 }
 .tech-news a {
   color: blue;
